content/docs/v1.3/configuration/registries/artifactory/index.mdx
---
title: "ARTIFACTORY (JFrog Artifactory)"
description: "The artifactory registry lets you configure a JFrog Artifactory integration."
---

import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/registries/artifactory/artifactory.png)

The `artifactory` registry lets you configure a [JFrog Artifactory](https://jfrog.com/artifactory/) Docker Registry integration.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_REGISTRY_ARTIFACTORY_{REGISTRY_NAME}_URL` | 🔴 | Registry URL (e.g. `https://artifactory.acme.com`) | | |
| `DD_REGISTRY_ARTIFACTORY_{REGISTRY_NAME}_LOGIN` | ⚪ | Artifactory username | DD_REGISTRY_ARTIFACTORY_\{REGISTRY_NAME\}_PASSWORD must be defined | |
| `DD_REGISTRY_ARTIFACTORY_{REGISTRY_NAME}_PASSWORD` | ⚪ | Artifactory password or API key | DD_REGISTRY_ARTIFACTORY_\{REGISTRY_NAME\}_LOGIN must be defined | |
| `DD_REGISTRY_ARTIFACTORY_{REGISTRY_NAME}_AUTH` | ⚪ | Base64 encoded `login:password` string | DD_REGISTRY_ARTIFACTORY_\{REGISTRY_NAME\}_LOGIN/PASSWORD must not be defined | |

## Examples

### Configure with credentials

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
      - DD_REGISTRY_ARTIFACTORY_PRIVATE_URL=https://artifactory.acme.com
      - DD_REGISTRY_ARTIFACTORY_PRIVATE_LOGIN=john
      - DD_REGISTRY_ARTIFACTORY_PRIVATE_PASSWORD=doe
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e "DD_REGISTRY_ARTIFACTORY_PRIVATE_URL=https://artifactory.acme.com" \
  -e "DD_REGISTRY_ARTIFACTORY_PRIVATE_LOGIN=john" \
  -e "DD_REGISTRY_ARTIFACTORY_PRIVATE_PASSWORD=doe" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>
